pequenos ajustes de estilizacao e criacao de classes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Brainstorm EJ</title>
     <!--Favcon-->
-    <link rel="icon" href="img/faviconbrainbranco.png">
+    <link rel="icon" href="img/bslogo.png">
 </head>
 
 
@@ -64,7 +64,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore facilis expedita hic non, culpa blanditiis enim sunt at alias? Impedit maiores labore amet quidem in sed adipisci eius aspernatur provident.
                     </p>
                     <br>
-                    <div class="btn btn-light">Faça seu Orçamento</div>
+                    <div class="btn btn-light" id="btn-orcamento">Faça seu Orçamento</div>
                 </div>
                 <div class="col-md-6">
                     <img src="img/notebook.png" class="img-fluid  d-none d-md-block ">
@@ -78,7 +78,7 @@
     <!--Conteudo 1-->
     <section id="titulos" class="bg-white p-3 d-flex">
         <div class="container">
-            <h1 class=" text-center ">Sobre nós</h1>
+            <h1 class="text-center">Sobre nós</h1>
         </div>
 
     </section>
@@ -89,18 +89,33 @@
                 <div class="col-md-6 align-self-center">
                     <img src="img/equipe.png " class="img-fluid d-none d-md-block ">
                 </div>
-                <div class="col-md-6 align-self-center marcadorx">
+                <div class="col-md-6 align-self-center marcadorx" id="text-body">
                     <h1>Conheça nossa história</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsa, consequuntur saepe minima mollitia libero provident non quis ex, soluta, nulla alias iure odio accusamus perspiciatis consequatur a laborum voluptatem!</p>
 
                     <a href="#" class="btn btn-custom" style="color: white;">
-                        <i class=" fas fa-caret-down fa-2x "></i>
+                        <i class="fas fa-arrow-down"></i>
                     </a>
                 </div>
 
             </div>
         </div>
 
+    </section>
+    <!--section A melhor escolha para a sua empresa-->
+    <section id="conteudo" class="bg-white p-3 d-flex ">
+        <div class="container ">
+            <div class="row justify-content-around">
+                <div class="col-md-6 align-self-center" id="text-body">
+                    <h1>A melhor escolha para a sua empresa </h1>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambl.</p>
+                </div>
+                <div class="col-md-6 align-self-center">
+                    
+                </div>
+
+            </div>
+        </div>
 
     </section>
 
