--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md  fixed-top navbar-transparente">
+        <nav class="navbar navbar-expand-md  fixed-top navbar-main">
             <div class="container">
                 <a href="index.html"> <img src="img/bslogo.png" class="navbar-brand" width="50"></a>
                 <button class="btn  navbar-toggler" data-toggle="collapse" data-target="#nav-principal"><!--Menu Hamburguer-->
@@ -85,7 +85,7 @@
     <!--col-md vai fazer o tratamento de responsividade-->
     <section id="conteudo" class="bg-white p-3 d-flex ">
         <div class="container ">
-            <div class="row justify-content-around">
+            <div class="row">
                 <div class="col-md-6 align-self-center">
                     <img src="img/equipe.png " class="img-fluid d-none d-md-block ">
                 </div>
@@ -105,13 +105,13 @@
     <!--section A melhor escolha para a sua empresa-->
     <section id="conteudo" class="bg-white p-3 d-flex ">
         <div class="container ">
-            <div class="row justify-content-around">
+            <div class="row">
                 <div class="col-md-6 align-self-center" id="text-body">
                     <h1>A melhor escolha para a sua empresa </h1>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambl.</p>
                 </div>
                 <div class="col-md-6 align-self-center">
-                    
+
                 </div>
 
             </div>
