--- a/index.html
+++ b/index.html
@@ -103,14 +103,51 @@
 
     </section>
     <!--section A melhor escolha para a sua empresa-->
-    <section id="conteudo" class="bg-white p-3 d-flex ">
+    <section id="conteudo2" class="bg-white p-3 d-flex">
         <div class="container ">
             <div class="row">
                 <div class="col-md-6 align-self-center" id="text-body">
+                    <img src="img/barra.svg" width="160">
                     <h1>A melhor escolha para a sua empresa </h1>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambl.</p>
                 </div>
                 <div class="col-md-6 align-self-center">
+                    <div class="row">
+                        <div class="col-md-6 align-self-center">
+                            <a href="#" class="btn btn-custom2" style="color: white;">
+                                <i class="fas fa-medal"></i>
+                            </a>
+                            <h3>Confiança</h3>
+                            <img src="img/barra.svg" width="80">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="col-md-6 align-self-center">
+                            <a href="#" class="btn btn-custom2" style="color: white;">
+                                <i class="fas fa-dollar-sign"></i>
+                            </a>
+                            <h3>Economia</h3>
+                            <img src="img/barra.svg" width="80">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 align-self-center">
+                            <a href="#" class="btn btn-custom2" style="color: white;">
+                                <i class="fas fa-code"></i>
+                            </a>
+                            <h3>Soluções Inovadoras</h3>
+                            <img src="img/barra.svg" width="80">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="col-md-6 align-self-center">
+                            <a href="#" class="btn btn-custom2" style="color: white;">
+                                <i class="fas fa-hands-helping"></i>
+                            </a>
+                            <h3>Suporte Gratuito</h3>
+                            <img src="img/barra.svg" width="80">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                    </div>
 
                 </div>
 
