--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="home" class="d-flex">
         <div class="container align-self-center marcador">
             <div class="row">
-                <div class="col-md-6 marcadorx">
+                <div class="col-md marcadorx">
                     <h1 class="display-5">Brainstorm EJ</h1>
                     <h2>Soluções personalizadas para seu negócio</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore facilis expedita hic non, culpa blanditiis enim sunt at alias? Impedit maiores labore amet quidem in sed adipisci eius aspernatur provident.
@@ -66,7 +66,7 @@
                     <br>
                     <div class="btn btn-light" id="btn-orcamento">Faça seu Orçamento</div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md">
                     <img src="img/notebook.png" class="img-fluid  d-none d-md-block ">
 
                 </div>
@@ -83,13 +83,13 @@
 
     </section>
     <!--col-md vai fazer o tratamento de responsividade-->
-    <section id="conteudo" class="bg-white p-3 d-flex ">
+    <section id="conteudo" class="bg-white p-3">
         <div class="container ">
             <div class="row">
-                <div class="col-md-6 align-self-center">
+                <div class="col-md align-self-center">
                     <img src="img/equipe.png " class="img-fluid d-none d-md-block ">
                 </div>
-                <div class="col-md-6 align-self-center marcadorx" id="text-body">
+                <div class="col-md align-self-center marcadorx  " id="text-body">
                     <h1>Conheça nossa história</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ipsa, consequuntur saepe minima mollitia libero provident non quis ex, soluta, nulla alias iure odio accusamus perspiciatis consequatur a laborum voluptatem!</p>
 
@@ -106,14 +106,14 @@
     <section id="conteudo2" class="bg-white p-3 d-flex">
         <div class="container ">
             <div class="row">
-                <div class="col-md-6 align-self-center" id="text-body">
+                <div class="col-md align-self-center" id="text-body">
                     <img src="img/barra.svg" width="160">
                     <h1>A melhor escolha para a sua empresa </h1>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambl.</p>
                 </div>
-                <div class="col-md-6 align-self-center">
+                <div class="  col-md align-self-center d-flex justify-content-end">
                     <div class="row">
-                        <div class="col-md-6 align-self-center">
+                        <div class="col-md align-self-center">
                             <a href="#" class="btn btn-custom2" style="color: white;">
                                 <i class="fas fa-medal"></i>
                             </a>
@@ -121,7 +121,7 @@
                             <img src="img/barra.svg" width="80">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
-                        <div class="col-md-6 align-self-center">
+                        <div class="col-md align-self-center">
                             <a href="#" class="btn btn-custom2" style="color: white;">
                                 <i class="fas fa-dollar-sign"></i>
                             </a>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 align-self-center">
+                        <div class="col-md align-self-center">
                             <a href="#" class="btn btn-custom2" style="color: white;">
                                 <i class="fas fa-code"></i>
                             </a>
@@ -139,7 +139,7 @@
                             <img src="img/barra.svg" width="80">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
-                        <div class="col-md-6 align-self-center">
+                        <div class="col-md align-self-center">
                             <a href="#" class="btn btn-custom2" style="color: white;">
                                 <i class="fas fa-hands-helping"></i>
                             </a>
