--- a/index.html
+++ b/index.html
@@ -156,6 +156,106 @@
 
     </section>
 
+    <!--section serviços-->
+    <section id="titulos" class="bg-white p-3 d-flex">
+        <div class="container">
+            <img src="img/barra.svg" width="160">
+            <h1 class="text-center">Conheça nosso Serviços</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque laboriosam nobis dolores animi error delectus impedit suscipit eligendi hic quam, placeat non ducimus molestiae eaque possimus quae minus eum facilis.</p>
+        </div>
+
+    </section>
+    <section id="servicos" class=" bg-white p-3 d-flex ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-md">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md ">
+                    <div class="jumbotron">
+                        <div class="container">
+                            <a href="#" class="btn btn-custom3 mb-3" style="color: white;">
+                                <i class="fas fa-laptop-code"></i>
+                            </a>
+                            <p class="lead">Criação de Sites</p>
+                            <hr>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+
+    </section>
+
 
 
 
