--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="btn btn-light" id="btn-orcamento">Faça seu Orçamento</div>
                 </div>
                 <div class="col-md">
-                    <img src="img/building.svg" class="img-fluid  d-none d-md-block ">
+                    <img src="img/building2.svg" class="img-fluid  d-none d-md-block ">
 
                 </div>
             </div>
