--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                             </span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next seta" href="#feedback" role="button" data-slide="next">
+                        <a class="carousel-control-next seta"  href="#feedback" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true">
                                 <img src="img/arrow.png" style="transform: rotate(270deg)">
                             </span>
@@ -321,7 +321,7 @@
                     <br><br>
                     Email: contato@brainstorm.com
                 </p>
-                <img src="./img/mail.png"> 
+                <img src="./img/mail.png" class="img-email-sent"> 
             </div>
             <div class="formulario col-md-5">
                 <form>
@@ -353,20 +353,27 @@
             <div class="col-md-4 text-center">
                 <h4><b>Curtiu o nosso trabalho?</b></h4><br>
                 Então siga-nos nas redes sociais<br>
-                <span>
-                    <a href="https://www.facebook.com/brainstormengenharia"><img class="icon" src="./img/facebook.png"></a>
-                </span>
-                <span>
-                    <a href="https://www.instagram.com/brainstormengenhariajr/?hl=pt-br"><img class="icon" src="./img/instagram.png"></a>
-                </span>
+                <div class="container-social-media">
+                    <a href="https://www.facebook.com/brainstormengenharia" class="btn-social-media">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.instagram.com/brainstormengenhariajr/?hl=pt-br" class="btn-social-media">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://twitter.com/BrainstormEngJr" class="btn-social-media">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
             </div>
             <div class="col-md-4 text-center">
                 <h4><b>Dúvidas?</b></h4><br>
                 Entre em contato conosco:<br>
-                <span>
-                    <img class="icon" src="./img/email.png">
-                </span>
-                brainstorm@contato.com
+                <div class="container-social-media">
+                    <a href="#" class="btn-social-media">
+                        <i class="far fa-envelope"></i>
+                    </a>
+                    brainstorm@contato.com
+                </div>
             </div><br><br><br>
             
         </div>
