--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <!--Conteudo 1-->
     <section id="titulos" class="bg-white p-3 d-flex">
-        <div class="container">
+        <div class="container pt-5">
             <h1 class="text-center">Sobre nós</h1>
         </div>
 
@@ -115,7 +115,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-md align-self-center" id="text-body">
-                    <img src="img/barra.svg" width="160">
+                    <img src="img/barra.svg" width="160" >
                     <h1>A melhor escolha para a sua empresa </h1>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
                         printer took a galley of type and scrambl.</p>
@@ -127,7 +127,8 @@
                                 <i class="fas fa-medal"></i>
                             </a>
                             <h3>Confiança</h3>
-                            <img src="img/barra.svg" width="80">
+                            <span class="justify-content-around"><img src="img/barra.svg" width="80"></span>
+                            
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="col-md align-self-center">
@@ -304,7 +305,7 @@
                     </p>
                     <img src="./img/mail.png" class="img-email-sent mb-3"> 
                 </div>
-                <div class="formulario col-md-5">
+                <div class="col-md-5">
                     <form>
                         <input class="input" type="text" placeholder="Nome*" id="nomeContato">
                         <br><br>
