Att-teste-paralax

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </section>
 
     <!--section serviços-->
-    <section id="titulos" class="bg-white p-3 d-flex">
+    <section id="titulos" class="p-3 d-flex">
         <div class="container">
             <img src="img/barra.svg" width="160">
             <h1 class="text-center">Conheça nosso Serviços</h1>
@@ -178,7 +178,7 @@
 
     </section>
 
-    <section id="servicos" class=" bg-white p-3 d-flex ">
+    <section id="servicos" class="p-3 d-flex ">
         <div class="container ">
             <div class="row ">
                 <div class="col-md">
@@ -327,7 +327,7 @@
 
 
     <!--Footer-->
-    <section>
+    <section id="rodape">
 
         <footer>
             <div class="container">
