--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body>
+<body style="opacity: 0.9;">
     <!--Navbar-->
    <header>
         <nav class="navbar navbar-expand-md  fixed-top navbar-main">
@@ -167,7 +167,7 @@
     </section>
 
     <!--section serviços-->
-    <section id="titulos" class="p-3 d-flex">
+    <section id="titulos" class=" bg-white p-3 d-flex">
         <div class="container">
             <img src="img/barra.svg" width="160">
             <h1 class="text-center">Conheça nosso Serviços</h1>
@@ -178,7 +178,7 @@
 
     </section>
 
-    <section id="servicos" class="p-3 d-flex ">
+    <section id="servicos" class="bg-white p-3 d-flex ">
         <div class="container ">
             <div class="row ">
                 <div class="col-md">
@@ -289,7 +289,7 @@
             
         </div>
     </section>
-    <section id="formulario" class="bg-white p-3">        
+    <section id="formulario" class="bg-white p-3" >        
         <div class="container mb-5">
             <div class="row">
                 <div class="contato col-md-7">
