--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
                     </p>
                     <img src="./img/mail.png" class="img-email-sent mb-3">
                 </div>
+                <script>
+                    console.log("Fuçando o código né safado!")
+
+                </script>
                 <div class="col-md-5">
                     <form>
                         <input class="input" type="text" placeholder="Nome*" id="nomeContato">
