--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <!--Style sheet Brainstorm-->
     <link rel="stylesheet" href="css/brainstyle.css">
 
     <!-- Font Awesome -->
