--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
 
     <!--Home-->
-    <section id="home" class="d-flex">
+    <section id="home" class="d-flex ">
         <div class="container align-self-center marcador">
             <div class="row">
                 <div class="col-md marcadorx">
@@ -236,65 +236,68 @@
 
     </section>
 
-    <section id="portfolio" class="bg-white" >
+    <section id="portfolio" class="bg-white">
         <div class="container">
             <div>
                 <h1 class="text-center"><br><br>Portifólio</h1>
             </div>
             <div class="container ">
-            <div class="row ">
-                <div class="containerc col-md">
+                <div class="row ">
+                    <div class="containerc col-md">
 
-                    <div class="card">
-                        <div class="face face1">
-                            <div class="content">
-                                <img src="img/1.png">
-                                <h3>Web Sites</h3>
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="img/1.png">
+                                    <h3>Web Sites</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus
+                                        iste
+                                        veritatis provident at.</p>
+                                    <a href="#">Read More</a>
+                                </div>
                             </div>
                         </div>
-                        <div class="face face2">
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste
-                                    veritatis provident at.</p>
-                                <a href="#">Read More</a>
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="img/2.png">
+                                    <h3>ID Visual</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus
+                                        iste
+                                        veritatis provident at.</p>
+                                    <a href="#">Read More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="face face1">
+                                <div class="content">
+                                    <img src="img/3.png">
+                                    <h3>Aplicativos</h3>
+                                </div>
+                            </div>
+                            <div class="face face2">
+                                <div class="content">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus
+                                        iste
+                                        veritatis provident at.</p>
+                                    <a href="#">Read More</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="face face1">
-                            <div class="content">
-                                <img src="img/2.png">
-                                <h3>ID Visual</h3>
-                            </div>
-                        </div>
-                        <div class="face face2">
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste
-                                    veritatis provident at.</p>
-                                <a href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="face face1">
-                            <div class="content">
-                                <img src="img/3.png">
-                                <h3>Aplicativos</h3>
-                            </div>
-                        </div>
-                        <div class="face face2">
-                            <div class="content">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste
-                                    veritatis provident at.</p>
-                                <a href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
 
             </div>
-
-        </div>
 
     </section>
 
