--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 </head>
 
 
-<body">
-    <!--Navbar-->
-    <header>
-        <nav class="navbar navbar-expand-md  fixed-top navbar-main">
+<body>
+    <!--Navbar-->    
+        <nav class=" navbar navbar-expand-md  fixed-top navbar-main">
             <div class="container">
                 <a href="index.html"> <img src="img/bslogo.png" class="navbar-brand mx-2" width="50"></a>
                 <button class="btn  navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
@@ -58,8 +57,6 @@
             </div>
 
         </nav>
-    </header>
-
     <!--Home-->
     <section id="home" class="d-flex ">
         <div class="container align-self-center marcador">
