--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <div class="card">
                             <div class="face face1">
                                 <div class="content">
-                                    <img src="img/3.png">
+                                    <img src="img/3.png" class="content-img">
                                     <h3>Aplicativos</h3>
                                 </div>
                             </div>
